--- a/app/assets/stylesheets/notifications.scss
+++ b/app/assets/stylesheets/notifications.scss
@@ -19,6 +19,13 @@
   &::-webkit-scrollbar {
     width: 0;
   }
+
+  .pagination__buttons {
+    a {
+      padding: 0.6rem 0.6rem;
+      width: 80px;
+    }
+  }
   .notification {
     display: flex;
     color: rgb(0, 0, 0);
