--- a/app/views/freelancer_infos/index.html.erb
+++ b/app/views/freelancer_infos/index.html.erb
@@ -5,4 +5,8 @@
   <%else%>
     <%= render 'no__projects-to-show' %>
   <% end %>
+  <div class="pagination__buttons">
+    <%= link_to_previous_page @projects, 'Previous ',class:'prv__btn' %>
+    <%= link_to_next_page @projects, 'Next ',class:'nxt__btn' %>
+  </div>
 </main>
