--- a/app/views/projects/bids/history.html.erb
+++ b/app/views/projects/bids/history.html.erb
@@ -13,4 +13,8 @@
       <%= render 'my-bids' ,bids: @bids%>
     <% end %>
   </ul>
+  <div class="pagination__buttons">
+    <%= link_to_previous_page @bids, 'Previous ',class:'prv__btn' %>
+    <%= link_to_next_page @bids, 'Next ',class:'nxt__btn' %>
+  </div>
 </section>
