--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -10,4 +10,8 @@
       <%= render 'my-postings' ,projects: @projects%>
     <% end %>
   </ul>
+  <div class="pagination__buttons">
+    <%= link_to_previous_page @projects, 'Previous ',class:'prv__btn' %>
+    <%= link_to_next_page @projects, 'Next ',class:'nxt__btn' %>
+  </div>
 </main>
