--- a/app/assets/stylesheets/project/details.scss
+++ b/app/assets/stylesheets/project/details.scss
@@ -1,6 +1,6 @@
 /*Mixin**/
 
-$font: "Comfortaa", cursive;
+$font: "Quicksand", serif;
 @mixin navigationArrow {
   content: "";
   position: absolute;
@@ -12,13 +12,30 @@ $font: "Comfortaa", cursive;
   border-right: 1px solid rgb(160, 154, 154);
   border-top: 1px solid transparent;
 }
+@mixin noRecord {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: inherit;
+  font-size: 1.3rem;
+  font-weight: 500;
+  gap: 1rem;
+  padding: 1rem;
+  svg {
+    display: block;
+    height: 200px;
+    opacity: 0.5;
+  }
+}
 /*****************/
 main {
   max-width: 1500px;
   position: relative;
   margin: 0 auto;
-  padding: 3rem 12rem;
-
+  padding: 2rem 0;
+  max-width: 800px;
+  z-index: 10;
   & > .project__overview {
     display: flex;
     list-style-type: none;
@@ -26,42 +43,46 @@ main {
     position: relative;
     background: white;
     & > li {
-      border: 2px solid rgb(224, 220, 220);
       flex: 1;
       text-align: center;
       line-height: 60px;
       height: 60px;
       font-size: 1.1rem;
       text-transform: capitalize;
-      border-radius: 5px;
+
       a {
         display: block;
+        position: relative;
+
         text-decoration: none;
         color: black;
         font-family: $font;
         font-weight: 700;
+        border: 2px solid rgb(224, 220, 220);
       }
     }
     .view__project-tab {
-      position: relative;
       border-right: none;
-
-      &:before {
-        @include navigationArrow;
-        transform: skew(20deg) translateX(300%);
-      }
-      &:after {
-        @include navigationArrow();
-        transform: skew(160deg) translateX(300%);
-        bottom: 0;
-      }
-      &:hover {
-        border: 2px solid #47c205;
+      a {
+        border-top-left-radius: 5px;
         border-right: none;
-        color: green;
-        &:after,
         &:before {
-          border: 1px solid #47c205;
+          @include navigationArrow;
+          transform: skew(20deg) translateX(300%);
+        }
+        &:after {
+          @include navigationArrow();
+          transform: skew(160deg) translateX(300%);
+          bottom: 0;
+        }
+        &:hover {
+          border: 2px solid #47c205;
+          border-right: none;
+          color: green;
+          &:after,
+          &:before {
+            border: 1px solid #47c205;
+          }
         }
       }
     }
@@ -70,19 +91,63 @@ main {
     }
 
     .review__proposals-tab {
-      border-left: none;
-      &:hover {
-        border: 2px solid #47c205;
+      a {
+        border-top-right-radius: 5px;
         border-left: none;
+        &:hover {
+          border: 2px solid #47c205;
+          border-left: none;
+        }
       }
     }
   }
   .project__post {
     width: 100%;
+    height: auto;
     line-height: normal;
     background: white;
+    transition: transform 0.6s;
+    overflow: scroll;
+    transform: translateX(0);
+    position: inherit;
+    z-index: -1;
+    box-shadow: none;
+    border: 1px solid #d6d2d2;
+    border-top: none;
+    display: flex;
+    .job__post-slider {
+      margin: 0;
+      padding: 0;
+      max-width: 100%;
+      border: none;
+    }
+    .actions__on-project {
+      flex-basis: 250px;
+      border-left: 1px solid #d6d2d2;
+      padding: 2rem 1rem;
+      li {
+        list-style-type: none;
+        min-width: 150px;
+
+        a {
+          color: rgb(56, 56, 56);
+          text-decoration: none;
+          font-weight: 500;
+          font-size: 0.9rem;
+          font-family: "Montserrat", sans-serif;
+          transition: all 0.3s;
+          &:hover {
+            font-weight: 600;
+            color: green;
+            text-decoration: underline;
+          }
+        }
+      }
+    }
   }
   .review__proposals {
+    border: 1px solid #cec8c8;
+    border-top: none;
     background: white;
     .proposals-tab {
       width: 100%;
@@ -91,43 +156,34 @@ main {
       line-height: normal;
       display: flex;
       list-style-type: none;
-      border: 1px solid #cec8c8;
+      position: relative;
       border-top: none;
       align-items: flex-end;
       gap: 3rem;
-
+      &::after {
+        content: "";
+        position: absolute;
+        background: green;
+        width: 25%;
+        height: 3px;
+        bottom: 0;
+        transition: all 0.5s;
+      }
       & > li {
         padding: 0.5rem 1rem;
         font-family: $font;
+        font-weight: 500;
       }
       a {
         text-decoration: none;
         color: black;
         letter-spacing: 1px;
         font-family: $font;
-        font-weight: 700;
+        font-weight: 600;
       }
-      .add__border-bottom {
-        position: relative;
-        &::after {
-          content: "";
-          position: absolute;
-          background: green;
-          width: 100%;
-          height: 3px;
-          bottom: 0;
-          left: 0;
-          animation: line 0.5s;
-        }
-        @keyframes line {
-          0% {
-            width: 0%;
-          }
-          100% {
-            width: 100%;
-          }
-        }
-      }
+    }
+    .no__data {
+      @include noRecord();
     }
     .proposals,
     .shortlisted__users,
@@ -145,10 +201,10 @@ main {
       position: relative;
       transition: all 0.5s;
       &:hover {
-        background-color: rgba(233, 231, 231, 0.972);
+        background-color: rgba(240, 240, 240, 0.972);
         cursor: pointer;
       }
-      border-bottom: 1px solid #cac4c4;
+      border-top: 1px solid #cac4c4;
       gap: 1rem;
       .user__image {
         flex-basis: 35px;
@@ -169,21 +225,24 @@ main {
         flex: 1;
 
         li {
-          font-size: 0.85rem;
+          font-size: 0.9rem;
           font-family: $font;
           color: #242424;
           span {
-            letter-spacing: 1px;
+            word-spacing: 2px;
             font-family: $font;
-            font-weight: 700;
+            font-weight: 600;
             color: black;
+          }
+          p {
+            font-size: 0.8rem;
           }
         }
         li:first-child {
           font-size: 0.95rem;
           color: green;
           text-transform: capitalize;
-          font-weight: 700;
+          font-weight: 600;
         }
         li:nth-child(2) {
           letter-spacing: 1px;
@@ -193,7 +252,7 @@ main {
           word-spacing: 1px;
         }
         .time {
-          font-weight: 400;
+          font-weight: 500;
           font-size: 0.7rem;
           color: #242424;
         }
@@ -211,20 +270,32 @@ main {
           display: block;
           background: #37a000;
           text-align: center;
-          padding: 0.3rem;
+          padding: 0.5rem;
           color: white;
           font-family: $font;
           text-decoration: none;
           font-weight: 500;
-          font-size: 0.9rem;
+          font-size: 1rem;
           width: 120px;
           border-radius: 5px;
           transition: all 0.6s;
-
+        }
+        .accept,
+        .message {
           &:hover {
-            cursor: pointer;
+            cursor: default;
+            background: #2a7701;
           }
         }
+        .reject {
+          background: #d66a6a;
+
+          &:hover {
+            cursor: default;
+            background: #b32121;
+          }
+        }
+
         .stamp {
           font-size: 1rem;
           font-weight: 700;
@@ -249,4 +320,13 @@ main {
       }
     }
   }
+}
+.awarded {
+  background: rgb(248, 217, 160);
+}
+.rejected {
+  background: rgb(250, 197, 197);
+}
+.accepted {
+  background: rgb(163, 200, 243);
 }
