--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -1,21 +1,25 @@
-document.querySelector(".messages__modal").insertAdjacentHTML(
-"beforeend",
-`
-<div class="message">
-  <%if @message.content? && @message.documents.attached?%>
-    <%=render partial: 'documents',locals: {documents: @documents,message: @message} %>
-    <%=render partial: 'content',locals: {message: @message} %>
-    <%=render partial: 'messageTime',locals: {message: @message} %>
-  <%elsif @message.content?%>
-    <%=render partial: 'content',locals: {message: @message} %>
-    <%=render partial: 'messageTime',locals: {message: @message} %>
-  <% elsif @message.documents.attached?%>
-    <%=render partial: 'documents',locals: {documents: @documents,message: @message} %>
-    <%=render partial: 'messageTime',locals: {message: @message} %>
-  <% end %>
-</div>
-`
-);
+<% if @message.content? || @message.documents.attached?%>
+  document.querySelector(".messages__modal").insertAdjacentHTML(
+  "beforeend",
+  `
+  <div class="message">
+    <%if @message.content? && @message.documents.attached?%>
+      <%=render partial: 'documents',locals: {documents: @documents,message: @message} %>
+      <%=render partial: 'content',locals: {message: @message} %>
+      <%=render partial: 'messageTime',locals: {message: @message} %>
+    <%elsif @message.content?%>
+      <%=render partial: 'content',locals: {message: @message} %>
+      <%=render partial: 'messageTime',locals: {message: @message} %>
+    <% elsif @message.documents.attached?%>
+      <%=render partial: 'documents',locals: {documents: @documents,message: @message} %>
+      <%=render partial: 'messageTime',locals: {message: @message} %>
+    <% end %>
+  </div>
+  `
+  );
+<% end %>
+document.querySelector("#message_content").value = "";
+document.querySelector(".attached")?.classList.remove("attached");
 document
-.querySelector(".attached")?.classList.remove("attached");
-document.querySelector(".messages__modal").lastElementChild.scrollIntoView(false);
+.querySelector(".messages__modal")
+.lastElementChild.scrollIntoView(false);
