--- a/app/views/pages/_search-results-freelancers.html.erb
+++ b/app/views/pages/_search-results-freelancers.html.erb
@@ -12,14 +12,17 @@
           </li >
           <li  class="freelancer__bio">
             <%if freelancer.freelancer_info.try(:bio)%>
-              <% if freelancer.freelancer_info.bio.length > 0 %>
-                <%=freelancer.freelancer_info.bio.from(0).to(215)%>......
+              <% if freelancer.freelancer_info.bio.length > 300 %>
+                <%=freelancer.freelancer_info.bio.from(0).to(300)%>......
               <% else %>
                 <%=freelancer.freelancer_info.bio%>
               <% end %>
             <% end %>
           </li>
-          <li class="freelancer__joined-on">joined <%=distance_of_time_in_words_to_now(freelancer.created_at)%> ago</li>
+          <li class="freelancer__joined-on">
+            <i class="fas fa-calendar-check"></i>
+            joined <%=distance_of_time_in_words_to_now(freelancer.created_at)%> ago
+          </li>
           <li></li>
         </ul>
         <%=link_to '', search_freelancer_profile_path(freelancer),remote: true%>
