--- a/app/views/projects/details/_all_proposals.html.erb
+++ b/app/views/projects/details/_all_proposals.html.erb
@@ -1,31 +1,37 @@
 <ul class="proposals">
-  <%bids.each do|bid|%>
-    <li class="proposal" id="<%=bid.id%>">
-      <div class="user__image"><%=inline_svg_tag 'default_avatar.svg' %></div>
-      <ul>
-        <li>
-          <%=bid.freelancer.name%>
-        </li>
-        <li>
-          <span>$<%=bid.value%>/hr</span>
-        </li>
-        <li>
-          <span>Proposal: </span>
-          <%=bid.proposal.from(0).to(250)%>
-          <%=link_to '...more',root_path %>
-        </li>
-        <li class="time">
-          <%=distance_of_time_in_words_to_now(bid.updated_at)%>
-        </li>
-      </ul>
-      <div class="bid__status">
-        <%if bid.unapproved?%>
-          <%=link_to 'accept', accept_project_bid_path(bid.project,bid) ,method: :put,remote: true%>
-          <%=link_to 'reject',reject_project_bid_path(bid.project,bid) ,method: :put ,remote: true%>
-        <%else%>
-          <span class="stamp is-<%=bid.aasm_state%>"><%=bid.aasm_state%></span>
-        <%end%>
-      </div>
-    </li >
-  <%end%>
+  <% if bids.count.zero?  %>
+    <div class="no__data">
+      <%=inline_svg_tag 'nodata.svg'%>
+      no data
+    </div>
+  <% else %>
+    <%bids.each do|bid|%>
+      <li class="proposal <%=bid.aasm_state%>" id="<%=bid.id%>  ">
+        <div class="user__image"><%=inline_svg_tag 'default_avatar.svg' %></div>
+        <ul>
+          <li>
+            <%=bid.freelancer.name%>
+          </li>
+          <li>
+            <span>Bid: $<%=bid.value%>/hr</span>
+          </li>
+          <li>
+            <span>Proposal: </span>
+            <p> <%=bid.proposal%></p>
+          </li>
+          <li class="time">
+            <%=distance_of_time_in_words_to_now(bid.updated_at)%>
+          </li>
+        </ul>
+        <div class="bid__status">
+          <%if !project_awarded?(bid.project) %>
+            <%=link_to 'accept', accept_project_bid_path(bid.project,bid) ,class:'accept',method: :put,remote: true%>
+            <%=link_to 'reject',reject_project_bid_path(bid.project,bid) ,class:'reject',method: :put ,remote: true%>
+          <% else %>
+            <span class="stamp is-<%=bid.aasm_state%>"><%=bid.aasm_state%></span>
+          <%end%>
+        </div>
+      </li >
+    <%end%>
+  <% end %>
 </ul>
