--- a/app/views/projects/details/_rejected.html.erb
+++ b/app/views/projects/details/_rejected.html.erb
@@ -1,25 +1,32 @@
 <ul class="rejected__users">
-  <%rejected.each do|bid|%>
-    <li class="proposal">
-      <div class="user__image"><%=inline_svg_tag 'default_avatar.svg' %></div>
-      <ul>
-        <li>
-          <%=bid.freelancer.name%>
-        </li>
-        <li>
-          <span>$<%=bid.value%>/hr</span>
-        </li>
-        <li>
-          <span>Proposal: </span>
-          <%=bid.proposal.from(0).to(250)%>
-        </li>
-        <li class="time">
-          <%=distance_of_time_in_words_to_now(bid.updated_at)%>
-        </li>
-      </ul>
-      <div class="bid__status">
-        <span class="stamp is-<%=bid.aasm_state%>"><%=bid.aasm_state%></span>
-      </div>
-    </li >
-  <%end%>
+  <% if rejected.count.zero? %>
+    <div class="no__data">
+      <%=inline_svg_tag 'nodata.svg'%>
+      no data
+    </div>
+  <% else %>
+    <%rejected.each do|bid|%>
+      <li class="proposal">
+        <div class="user__image"><%=inline_svg_tag 'default_avatar.svg' %></div>
+        <ul>
+          <li>
+            <%=bid.freelancer.name%>
+          </li>
+          <li>
+            <span>Bid: $<%=bid.value%>/hr</span>
+          </li>
+          <li>
+            <span>Proposal: </span>
+            <p> <%=bid.proposal%></p>
+          </li>
+          <li class="time">
+            <%=distance_of_time_in_words_to_now(bid.updated_at)%>
+          </li>
+        </ul>
+        <div class="bid__status">
+          <span class="stamp is-<%=bid.aasm_state%>"><%=bid.aasm_state%></span>
+        </div>
+      </li >
+    <%end%>
+  <% end %>
 </ul>
