--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,39 +1,1 @@
-<%=form_for @project  do|f|%>
-  <div class="project__page">
-    <div class="project__title-form">
-      <%= f.label :title,'Enter the name of your job post'  %>
-      <br />
-      <%= f.text_field :title %>
-    </div>
-    <div class="project__description-form" >
-      <%=f.label :description,'A good description includes:'%>
-      <ul>
-        <li>What the deliverable is</li>
-        <li>Type of freelancer or agency you're looking for</li>
-        <li>Anything unique about the project, team, or your company</li>
-      </ul>
-      <%= f.text_area :description  %>
-    </div>
-    <div class="project__budget-form">
-      <%= f.label :min_budget ,'Set your hourly range:'%>
-      <section class="project__budget-field">
-        <div>
-          <%= f.text_field :min_budget,placeholder: '0.00',id:'min__budget'%>
-        </div>
-        <div>
-          <%= f.label :max_budget ,"to:"%>
-          <%= f.text_field :max_budget,placeholder: '0.00' %>
-        </div>
-      </section>
-      <div class="project__experience-form">
-        <%= f.label :experience,'What level of Experience should your freelancer have?' %>
-        <div class="experience-level">
-          <div class="experience__level"><%= f.radio_button :experience, 'Entry Level'%><b>Entry Level</b><small> Looking for someone relatively new to field</small> </div>
-          <div class="experience__level"> <%= f.radio_button :experience, 'Intermediate'%> <b> Intermediate</b><small> Looking for someone relatively new to field</small></div>
-          <div class="experience__level"> <%= f.radio_button :experience, 'Expert'%> <b>Expert</b><small> Looking for someone relatively new to field</small></div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <%=f.submit%>
-<%end%>
+<%=render partial: "form",locals: {project: @project}  %>
